[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harshad-screener-service"
version = "0.1.0"
description = "Stock/crypto screening microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pandas>=2.0",
    "yfinance>=0.2",
    "pandas-ta>=0.3",
    "APScheduler>=3.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
